// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should render alpha info text 1`] = `
<Page
  navModel={Object {}}
>
  <PageContents
    isLoading={false}
  >
    <div>
      <form
        onSubmit={[Function]}
      >
        <div
          className="gf-form"
        >
          <label
            className="gf-form-label width-10"
          >
            Plugin state
          </label>
          <label
            className="gf-form-label gf-form-label--transparent"
          >
            <PluginStateinfo
              state="alpha"
            />
          </label>
        </div>
        <BasicSettings
          dataSourceName="gdev-cloudwatch"
          isDefault={false}
          onDefaultChange={[Function]}
          onNameChange={[Function]}
        />
        <PluginSettings
          dataSource={
            Object {
              "access": "",
              "basicAuth": false,
              "basicAuthPassword": "",
              "basicAuthUser": "",
              "database": "",
              "id": 13,
              "isDefault": false,
              "jsonData": Object {
                "authType": "credentials",
                "defaultRegion": "eu-west-2",
              },
              "name": "gdev-cloudwatch",
              "orgId": 1,
              "password": "",
              "readOnly": false,
              "type": "cloudwatch",
              "typeLogoUrl": "public/app/plugins/datasource/cloudwatch/img/amazon-web-services.png",
              "url": "",
              "user": "",
              "withCredentials": false,
            }
          }
          dataSourceMeta={
            Object {
              "baseUrl": "path/to/plugin",
              "defaultNavUrl": "some/url",
              "enabled": false,
              "hasUpdate": false,
              "id": "1",
              "info": Object {
                "author": Object {
                  "name": "Grafana Labs",
                  "url": "url/to/GrafanaLabs",
                },
                "description": "pretty decent plugin",
                "links": Array [
                  Object {
                    "name": "project",
                    "url": "one link",
                  },
                ],
                "logos": Object {
                  "large": "large/logo",
                  "small": "small/logo",
                },
                "screenshots": Array [
                  Object {
                    "name": "test",
                    "path": "screenshot",
                  },
                ],
                "updated": "2018-09-26",
                "version": "1",
              },
              "latestVersion": "1",
              "module": "path/to/module",
              "name": "pretty cool plugin 1",
              "pinned": false,
              "state": "alpha",
              "type": "panel",
            }
          }
          onModelChange={[Function]}
          plugin={
            DataSourcePlugin {
              "DataSourceClass": Object {},
              "components": Object {},
              "meta": Object {},
            }
          }
        />
        <div
          className="gf-form-group"
        />
        <ButtonRow
          isReadOnly={false}
          onDelete={[Function]}
          onSubmit={[Function]}
          onTest={[Function]}
        />
      </form>
    </div>
  </PageContents>
</Page>
`;

exports[`Render should render beta info text 1`] = `
<Page
  navModel={Object {}}
>
  <PageContents
    isLoading={false}
  >
    <div>
      <form
        onSubmit={[Function]}
      >
        <div
          className="gf-form"
        >
          <label
            className="gf-form-label width-10"
          >
            Plugin state
          </label>
          <label
            className="gf-form-label gf-form-label--transparent"
          >
            <PluginStateinfo
              state="beta"
            />
          </label>
        </div>
        <BasicSettings
          dataSourceName="gdev-cloudwatch"
          isDefault={false}
          onDefaultChange={[Function]}
          onNameChange={[Function]}
        />
        <div
          className="gf-form-group"
        />
        <ButtonRow
          isReadOnly={false}
          onDelete={[Function]}
          onSubmit={[Function]}
          onTest={[Function]}
        />
      </form>
    </div>
  </PageContents>
</Page>
`;

exports[`Render should render component 1`] = `
<Page
  navModel={Object {}}
>
  <PageContents
    isLoading={false}
  >
    <div>
      <form
        onSubmit={[Function]}
      >
        <BasicSettings
          dataSourceName="gdev-cloudwatch"
          isDefault={false}
          onDefaultChange={[Function]}
          onNameChange={[Function]}
        />
        <div
          className="gf-form-group"
        />
        <ButtonRow
          isReadOnly={false}
          onDelete={[Function]}
          onSubmit={[Function]}
          onTest={[Function]}
        />
      </form>
    </div>
  </PageContents>
</Page>
`;

exports[`Render should render is ready only message 1`] = `
<Page
  navModel={Object {}}
>
  <PageContents
    isLoading={false}
  >
    <div>
      <form
        onSubmit={[Function]}
      >
        <div
          className="grafana-info-box span8"
        >
          This datasource was added by config and cannot be modified using the UI. Please contact your server admin to update this datasource.
        </div>
        <BasicSettings
          dataSourceName="gdev-cloudwatch"
          isDefault={false}
          onDefaultChange={[Function]}
          onNameChange={[Function]}
        />
        <PluginSettings
          dataSource={
            Object {
              "access": "",
              "basicAuth": false,
              "basicAuthPassword": "",
              "basicAuthUser": "",
              "database": "",
              "id": 13,
              "isDefault": false,
              "jsonData": Object {
                "authType": "credentials",
                "defaultRegion": "eu-west-2",
              },
              "name": "gdev-cloudwatch",
              "orgId": 1,
              "password": "",
              "readOnly": true,
              "type": "cloudwatch",
              "typeLogoUrl": "public/app/plugins/datasource/cloudwatch/img/amazon-web-services.png",
              "url": "",
              "user": "",
              "withCredentials": false,
            }
          }
          dataSourceMeta={
            Object {
              "baseUrl": "path/to/plugin",
              "defaultNavUrl": "some/url",
              "enabled": false,
              "hasUpdate": false,
              "id": "1",
              "info": Object {
                "author": Object {
                  "name": "Grafana Labs",
                  "url": "url/to/GrafanaLabs",
                },
                "description": "pretty decent plugin",
                "links": Array [
                  Object {
                    "name": "project",
                    "url": "one link",
                  },
                ],
                "logos": Object {
                  "large": "large/logo",
                  "small": "small/logo",
                },
                "screenshots": Array [
                  Object {
                    "name": "test",
                    "path": "screenshot",
                  },
                ],
                "updated": "2018-09-26",
                "version": "1",
              },
              "latestVersion": "1",
              "module": "path/to/module",
              "name": "pretty cool plugin 1",
              "pinned": false,
              "type": "panel",
            }
          }
          onModelChange={[Function]}
          plugin={
            DataSourcePlugin {
              "DataSourceClass": Object {},
              "components": Object {},
              "meta": Object {},
            }
          }
        />
        <div
          className="gf-form-group"
        />
        <ButtonRow
          isReadOnly={true}
          onDelete={[Function]}
          onSubmit={[Function]}
          onTest={[Function]}
        />
      </form>
    </div>
  </PageContents>
</Page>
`;

exports[`Render should render loader 1`] = `
<Page
  navModel={Object {}}
>
  <PageContents
    isLoading={true}
  />
</Page>
`;
